--- a/css/login.css
+++ b/css/login.css
@@ -93,3 +93,21 @@ button:hover {
 .register-link a:hover {
     text-decoration: underline;
 }
+
+.swal2-container {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    z-index: 10000 !important;
+}
+
+body,
+html {
+    height: 100%;
+    overflow: hidden; /* evita scroll */
+}
