--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('../assets/fundoLogin.jpg');
+    background-image: url('../assets/bannerTopo.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
